--- a/data-structures-and-algorithms/Fibonacci Sequences with Multiple Techniques.ipynb
+++ b/data-structures-and-algorithms/Fibonacci Sequences with Multiple Techniques.ipynb
@@ -24,6 +24,7 @@
     "# Brute Force\n",
     "- This is the most basic way to implement a Fibonaci Sequence\n",
     "- Clearest implementation vs the other methods\n",
+    "\n",
     "### Efficiency\n",
     "- It is not the most efficient though because multiple calls are made to recalculate the same values.\n",
     "- Time complexity is exponential O(2^n) or O(1.6^n) more specifically\n",
@@ -37,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def fib_rec(n):\n",
-    "    \"\"\"Computes the nth Fibonacci number\"\"\"\n",
+    "    \"\"\"Computes the nth Fibonacci number using recursion\"\"\"\n",
     "    \n",
     "    # base cases\n",
     "    if n == 0 or n == 1: return n\n",
@@ -54,15 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37 µs, sys: 2 µs, total: 39 µs\n",
-      "Wall time: 53.9 µs\n"
+      "CPU times: user 39 µs, sys: 4 µs, total: 43 µs\n",
+      "Wall time: 120 µs\n"
      ]
     },
     {
@@ -71,7 +72,7 @@
        "5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41 µs, sys: 1e+03 ns, total: 42 µs\n",
-      "Wall time: 51 µs\n"
+      "CPU times: user 70 µs, sys: 2 µs, total: 72 µs\n",
+      "Wall time: 86.1 µs\n"
      ]
     },
     {
@@ -99,7 +100,7 @@
        "13"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -119,8 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.09 s, sys: 20.4 ms, total: 2.11 s\n",
-      "Wall time: 2.18 s\n"
+      "CPU times: user 2.18 s, sys: 46.9 ms, total: 2.22 s\n",
+      "Wall time: 2.53 s\n"
      ]
     },
     {
@@ -129,12 +130,13 @@
        "832040"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# lags\n",
     "% time fib_rec(30)"
    ]
   },
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -205,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39 µs, sys: 2 µs, total: 41 µs\n",
-      "Wall time: 58.2 µs\n"
+      "CPU times: user 24 µs, sys: 2 µs, total: 26 µs\n",
+      "Wall time: 33.6 µs\n"
      ]
     },
     {
@@ -222,7 +224,7 @@
        "5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +244,7 @@
        "[0, 1, 1, 2, 3, 5]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,15 +255,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 61 µs, sys: 20 µs, total: 81 µs\n",
-      "Wall time: 1.06 ms\n"
+      "CPU times: user 25 µs, sys: 2 µs, total: 27 µs\n",
+      "Wall time: 35 µs\n"
      ]
     },
     {
@@ -270,7 +272,7 @@
        "13"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 143 µs, sys: 28 µs, total: 171 µs\n",
-      "Wall time: 2.06 ms\n"
+      "CPU times: user 107 µs, sys: 2 µs, total: 109 µs\n",
+      "Wall time: 126 µs\n"
      ]
     },
     {
@@ -298,7 +300,7 @@
        "832040"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,15 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 82 µs, sys: 1e+03 ns, total: 83 µs\n",
-      "Wall time: 91.8 µs\n"
+      "CPU times: user 82 µs, sys: 1 µs, total: 83 µs\n",
+      "Wall time: 92 µs\n"
      ]
     },
     {
@@ -326,7 +328,7 @@
        "1548008755920"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -374,15 +376,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16 µs, sys: 2 µs, total: 18 µs\n",
-      "Wall time: 24.8 µs\n"
+      "CPU times: user 15 µs, sys: 1 µs, total: 16 µs\n",
+      "Wall time: 26 µs\n"
      ]
     },
     {
@@ -391,7 +393,7 @@
        "5"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,15 +404,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16 µs, sys: 1e+03 ns, total: 17 µs\n",
-      "Wall time: 25 µs\n"
+      "CPU times: user 16 µs, sys: 2 µs, total: 18 µs\n",
+      "Wall time: 26 µs\n"
      ]
     },
     {
@@ -419,7 +421,7 @@
        "13"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,15 +432,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21 µs, sys: 1 µs, total: 22 µs\n",
-      "Wall time: 31 µs\n"
+      "CPU times: user 23 µs, sys: 2 µs, total: 25 µs\n",
+      "Wall time: 33.1 µs\n"
      ]
     },
     {
@@ -447,7 +449,7 @@
        "832040"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,15 +460,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 54 µs, sys: 3 µs, total: 57 µs\n",
-      "Wall time: 211 µs\n"
+      "CPU times: user 31 µs, sys: 1e+03 ns, total: 32 µs\n",
+      "Wall time: 43.9 µs\n"
      ]
     },
     {
@@ -475,7 +477,7 @@
        "1548008755920"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
